tests/baselines/reference/privateNameConstructorReserved.errors.txt
<<<<<<< HEAD
tests/cases/conformance/classes/members/privateNames/privateNameConstructorReserved.ts(4,5): error TS18012: '#constructor' is a reserved word.
=======
tests/cases/conformance/classes/members/privateNames/privateNameConstructorReserved.ts(2,5): error TS18012: '#constructor' is a reserved word.
tests/cases/conformance/classes/members/privateNames/privateNameConstructorReserved.ts(2,5): error TS18022: A method cannot be named with a private identifier.
>>>>>>> Add private instance field transformation, pr feedback


==== tests/cases/conformance/classes/members/privateNames/privateNameConstructorReserved.ts (2 errors) ====
    class A {
        #constructor() {}      // Error: `#constructor` is a reserved word.
        ~~~~~~~~~~~~
!!! error TS18012: '#constructor' is a reserved word.
<<<<<<< HEAD
=======
        ~~~~~~~~~~~~
!!! error TS18022: A method cannot be named with a private identifier.
>>>>>>> Add private instance field transformation, pr feedback
    }
    